app.less
//@import "bower_components/semantic-ui/src/semantic.less";
// @import "bower_components/bootstrap/less/bootstrap.less";
//@import "bower_components/bootstrap/less/theme.less";
@import "bower_components/font-awesome/less/font-awesome.less";
@import (css) "bower_components/angular-loading-bar/src/loading-bar.css";
// @import "bower_components/jasny-bootstrap/less/jasny-bootstrap.less";

// @import "bower_components/angular-motion/src/collapse/collapse.less";
// @import "bower_components/angular-motion/src/fade/fade.less";
// @import "bower_components/angular-motion/src/fade-and-scale/fade-and-scale.less";
// @import "bower_components/angular-motion/src/fade-and-slide/fade-and-slide.less";
// @import "bower_components/angular-motion/src/flip/flip.less";
// @import "bower_components/angular-motion/src/slide/slide.less";


/* Component LESS */
@import "partial/home/home.less";
@import "partial/navigation/navigation.less";
@import "partial/treebank/treebank.less";
@import "partial/browse/browse.less";
@import "pmltqTreebank/pmltqTreebank.less";
@import "pmltqHelp/pmltqHelp.less";
@import "pmltqHistory/pmltqHistory.less";
@import "semanticUI/semanticUI.less";
@import "partial/query/query.less";
@import "partial/suggest/suggest.less";
@import "partial/history/history.less";
@import "partial/result/result.less";
@import "partial/help/help.less";
/* Add Component LESS Above */

// Variables

@gray-darker: lighten(#000, 13.5%);
@gray-dark: lighten(#000, 20%);
@gray: lighten(#000, 33.5%);
@gray-light: lighten(#000, 60%);
@gray-lighter: lighten(#000, 93.5%);
@gray-lightest: lighten(#000, 97.25%);
@brand-primary: #428bca;
@brand-success: #5cb85c;
@brand-info: #5bc0de;
@brand-warning: #f0ad4e;
@brand-danger: #d9534f;

@fa-font-path: "bower_components/font-awesome/fonts";
@icon-font-path: "bower_components/bootstrap/fonts/";

@navmenu-width: 200px;

//@navbar-height: 30px;

/* Required for Angular UI Bootstrap */
.nav, .pagination, .carousel, .panel-title, .navbar-header {
  a {
    cursor: pointer;
  }
}

html, body {
  height: 100%;
}

// body {
//   background-color: @gray-lightest;
// }

#page-wrapper {
  position: relative;
  left: 0;
  z-index: 2;
  min-height: 100%;
  background-color: white;
}

.text.mono {
  font-family: monospace;
}

.table-without-borders {
  &> tbody > tr > td {
    border: none;
  }
}

/* Personal preference for BS modal.  The LESS below makes the backdrop white and
   causes the modal to fade in rather than slide in. */
//@modal-backdrop-bg: white;
//.modal {
//	&.fade {
//		.transition(opacity .3s);
//	}
//	&.fade .modal-dialog {
//		.translate(0,0);
//	}
//}

